Update SB Classes Lonikand.html

--- a/SB Classes Lonikand.html
+++ b/SB Classes Lonikand.html
@@ -1,18 +1,92 @@
-<html>
-<head> <title> SB Classes Lonikand </title> </head>
-<body bgcolor="cyan" text="black">
-<marquee bgcolor= "yellow"> SB CLASSES LONIKAND </MARQUEE>
-<h1> Coching center </h1>
-<hr bgcolor="green" size="5">
-<b>
-<h1> About Us </h1>
-<big><b>This class is a part of SB Classes; SB Classes Lonikand is a new department opened in Lonikand.
-<hr bgcolor="green" size="5">
-<h2> Contact Us </h2>
-<big>If you want more details you can contact us by our email id which is sbclasseslonikand@gmail.com or else by this link-<a href = "https://om108-art.github.io/SB-Classes-Lonikand-Contact-Center/SB%20Classes%20Lonikand%20Contact%20Center.html"> Contact Us </a> 
-<br>
-<marquee bgcolor="red" scrollamount="10"> THIS WEB SITE IS UNDERDEVLOPMENT </marquee>
-<hr bgcolor="green" size="5">
-<marquee bgcolor= "yellow"  scrollamount="5"> © 2025 SB Classes Lonikand </marquee>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SB Classes Lonikand</title>
+    <style>
+        /* Set the background and text color */
+        body {
+            background-color: cyan;
+            color: black;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+
+        /* Style for the marquee banners */
+        marquee {
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px;
+        }
+
+        /* Yellow marquee */
+        .yellow-marquee {
+            background-color: yellow;
+            color: black;
+        }
+
+        /* Red marquee */
+        .red-marquee {
+            background-color: red;
+            color: white;
+            font-weight: bold;
+        }
+
+        /* Styling for headings */
+        h1 {
+            color: darkblue;
+            font-size: 32px;
+        }
+
+        h2 {
+            color: darkgreen;
+            font-size: 28px;
+        }
+
+        /* Styling for horizontal lines */
+        hr {
+            border: none;
+            height: 5px;
+            background-color: green;
+            margin: 20px auto;
+            width: 80%;
+        }
+
+        /* Style for links */
+        a {
+            color: blue;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        a:hover {
+            color: darkred;
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <marquee class="yellow-marquee">SB CLASSES LONIKAND</marquee>
+
+    <h1>Coaching Center</h1>
+    <hr>
+
+    <h1>About Us</h1>
+    <p><b>This class is a part of SB Classes; SB Classes Lonikand is a new department opened in Lonikand.</b></p>
+    <hr>
+
+    <h2>Contact Us</h2>
+    <p>If you want more details, you can contact us via our email: <b>sbclasseslonikand@gmail.com</b></p>
+    <p>Or visit this link: 
+        <a href="https://om108-art.github.io/SB-Classes-Lonikand-Contact-Center/SB%20Classes%20Lonikand%20Contact%20Center.html">
+            Contact Us
+        </a>
+    </p>
+
+    <br>
+    <marquee class="red-marquee" scrollamount="10">THIS WEBSITE IS UNDER DEVELOPMENT</marquee>
+    <hr>
+
+    <marquee class="yellow-marquee" scrollamount="5">© 2025 SB Classes Lonikand</marquee>
 </body>
 </html>
